# ReinforcementLearningCourse

./: README.md  pyproject.toml
Lab/: pyproject.toml
Lab/simulation/: bank.ipynb  simpy intro.ipynb
function_approximation/: deep_q_learning.ipynb  dqn_embeddings.ipynb  dqn_representation_learning.ipynb  reinforce.ipynb
simulation/: bank.ipynb  bank_impatient.ipynb  bank_jockeying.ipynb  bank_with_jockeying.ipynb  simpy intro.ipynb
