[project]
name = "reinforcement-learning-simulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.0",
    "matplot>=0.1.9",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "simpy>=4.1.1",
    "tqdm>=4.67.1",
]
